tests/negative/import8_a.toit
// Copyright (C) 2019 Toitware ApS. All rights reserved.

import .import8_b show B A
export A
